[gd_scene load_steps=3 format=3 uid="uid://fwjp1pix35nf"]

[ext_resource type="Script" uid="uid://dfmk8mpr6bxbh" path="res://Scripts/Hover_pop_up.gd" id="1_whh1f"]

[sub_resource type="LabelSettings" id="LabelSettings_whh1f"]
font_size = 14

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_whh1f")

[node name="HoverPopUpContainer" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="HoverPopUpContainer"]
layout_mode = 2

[node name="LableTitle" type="Label" parent="HoverPopUpContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="LabelDescription" type="Label" parent="HoverPopUpContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_whh1f")
vertical_alignment = 1
